# seamless-texture-maker

./: .gitignore  PRIVACY_POLICY.md  README.md  build.bat  build.spec  build_store.bat  build_store.spec  create_icon.py  installer.iss  main.py  make_splash.py  requirements.txt  version_info.txt
.github/workflows/: build.yml
app/core/: ao_generator.py  assertions.py  cache.py  delighting.py  edge_blending.py  edge_blending_jit.py  exceptions.py  gpu_utils.py  inpainting.py  materialize_methods.py  materialize_methods_jit.py  normal_generator.py  offset_mapping.py  seamless.py  warmup.py
app/gui/: controls.py  credits_dialog.py  export_dialog.py  image_viewer.py  main_window.py  normal_controls.py  pbr_viewport.py  splash_screen.py  styles.py  system_monitor.py
app/utils/: app_logging.py  config.py  image_io.py  perf.py  updater.py
benchmarks/: run_benchmarks.py
docs/: .gitignore  mint.json  styles.css
docs/pages/: auto-update.mdx  delight.mdx  getting-started.mdx  index.mdx  keyboard-shortcuts.mdx  limitations.mdx  material-lab.mdx  quick-start.mdx  settings.mdx  troubleshooting.mdx  viewport-2d.mdx  viewport-3d.mdx  workspace.mdx
docs/pages/export/: blender.mdx  corona.mdx  pbr-export.mdx  quick-export.mdx  ue5.mdx  vray.mdx
docs/pages/seamless/: overlap-blend.mdx  splat-synthesis.mdx
scratch/: fix_ui.py
seams_core/: Cargo.toml  pyproject.toml
seams_core/src/: edge_blend.rs  gradients.rs  lib.rs  splat.rs
store/: AppxManifest.xml
tests/: test_cache.py  test_edge_blending.py  test_image_io.py  test_normal_generator.py  test_splat.py
